--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -153,6 +153,9 @@
                                     <constraint firstAttribute="width" constant="50" id="uay-Hf-Slt"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="play"/>
+                                <connections>
+                                    <action selector="playTrailer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jtv-mf-5Q0"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="93t-cj-9Qx">
                                 <rect key="frame" x="0.0" y="418.33333333333326" width="375" height="393.66666666666674"/>
